5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4328/executions/1668_2969.log
== TEST (2019-04-15 19:19:47) 
-- CODE:

quantidade = int(input())
preco1 = float(input())
preco2 = float(input())

if (quantidade > 1):
	valor = (preco1 + 0.75 * preco2)
else:
	valor = preco1
-- OUTPUT:
3002
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:20:22) 
-- CODE:

quantidade = int(input())
preco1 = float(input())
preco2 = float(input())

if (quantidade > 1):
	valor = (preco1 + 0.75 * preco2)
else:
	valor = preco1
	
print(valor)
-- OUTPUT:
130.6875
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:20:33) 
-- CODE:

quantidade = int(input())
preco1 = float(input())
preco2 = float(input())

if (quantidade > 1):
	valor = (preco1 + 0.75 * preco2)
else:
	valor = preco1
	
print(valor)
-- EXECUTION TIME:
0.168913
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
130.6875
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
190.1775
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:21:06) 
-- CODE:

quantidade = int(input())
preco1 = float(input())
preco2 = float(input())

if (quantidade > 1):
	valor = (preco1 + 0.75 * preco2)
else:
	valor = preco1
	
print(round(valor,2))
-- OUTPUT:
130.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:21:20) 
-- CODE:

quantidade = int(input())
preco1 = float(input())
preco2 = float(input())

if (quantidade > 1):
	valor = (preco1 + 0.75 * preco2)
else:
	valor = preco1
	
print(round(valor,2))
-- EXECUTION TIME:
0.165954
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
130.69
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
190.18
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:21:50) 
-- CODE:

quantidade = int(input())
preco1 = float(input())
preco2 = float(input())

if (quantidade > 1):
	valor = (preco1 + 0.75 * preco2)
else:
	valor = (preco1)
	
print(round(valor,2))
-- OUTPUT:
130.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:22:05) 
-- CODE:

quantidade = int(input())
preco1 = float(input())
preco2 = float(input())

if (quantidade > 1):
	valor = (preco1 + 0.75 * preco2)
else:
	valor = (preco1)
	
print(round(valor,2))
-- EXECUTION TIME:
0.205615
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
130.69
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
190.18
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:23:47) 
-- CODE:

quantidade = int(input())
preco1 = float(input())
preco2 = float(input())

if (quantidade > 1):
	valor = (preco1 + 0.75 * preco2)
else:
	valor = (preco1)
	
print(round(valor,2))
-- OUTPUT:
130.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:24:07) 
-- CODE:

quantidade = int(input())
preco1 = float(input())
preco2 = float(input())

if (quantidade > 1):
	valor = (preco1 + 0.75 * preco2)
else:
	valor = (preco1)
	
print(round(valor,2))
-- EXECUTION TIME:
0.176872
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
130.69
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
190.18
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:24:10) 
-- CODE:

quantidade = int(input())
preco1 = float(input())
preco2 = float(input())

if (quantidade > 1):
	valor = (preco1 + 0.75 * preco2)
else:
	valor = (preco1)
	
print(round(valor,2))
-- OUTPUT:
130.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:25:29) 
-- CODE:

quantidade = int(input())
preco1 = float(input())
preco2 = float(input())

if (quantidade > 1):
	valor = (preco1 + (0.75 * preco2))
else:
	valor = (preco1)
	
print(round(valor,2))
-- EXECUTION TIME:
0.137776
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
130.69
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
190.18
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:25:34) 
-- CODE:

quantidade = int(input())
preco1 = float(input())
preco2 = float(input())

if (quantidade > 1):
	valor = (preco1 + (0.75 * preco2))
else:
	valor = (preco1)
	
print(round(valor,2))

-- OUTPUT:
130.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:25:46) 
-- CODE:

quantidade = int(input())
preco1 = float(input())
preco2 = float(input())

if (quantidade > 1):
	valor = (preco1 + (0.75 * preco2))
else:
	valor = (preco1)
	
print(round(valor,2))

-- EXECUTION TIME:
0.203584
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
130.69
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
190.18
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:26:15) 
-- CODE:

quantidade = int(input())
preco1 = float(input())
preco2 = float(input())

if (quantidade > 1):
	valor = (preco1 + (0.75 * preco2))
else:
	valor = (preco1)
	
print(round(valor,2))

-- OUTPUT:
130.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:26:39) 
-- CODE:

quantidade = int(input())
preco1 = float(input())
preco2 = float(input())

if (quantidade > 1):
	valor = (preco1 + (0.75 * preco2))
else:
	valor = (preco1)
	
print(round(valor,2))

-- EXECUTION TIME:
0.204279
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
130.69
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
190.18
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:26:42) 
-- CODE:

quantidade = int(input())
preco1 = float(input())
preco2 = float(input())

if (quantidade > 1):
	valor = (preco1 + (0.75 * preco2))
else:
	valor = (preco1)
	
print(round(valor,2))

-- OUTPUT:
130.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:27:31) 
-- CODE:

quantidade = int(input())
preco1 = float(input())
preco2 = float(input())

if (quantidade > 1):
	valor = (preco1 + (0.75 * preco2))
else:
	valor = (preco1)
	
print(round(valor,2))

-- EXECUTION TIME:
0.151893
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
130.69
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
190.18
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:30:28) 
-- CODE:

quantidade = int(input())
preco1 = float(input())
preco2 = float(input())

if (quantidade < 2):
	valor = (preco1)
else:
	valor = (preco1 + (0.75 * preco2))
	
print(round(valor,2))

-- OUTPUT:
130.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:30:40) 
-- CODE:

quantidade = int(input())
preco1 = float(input())
preco2 = float(input())

if (quantidade < 2):
	valor = (preco1)
else:
	valor = (preco1 + (0.75 * preco2))
	
print(round(valor,2))

-- EXECUTION TIME:
0.153117
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
130.69
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
190.18
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:34:49) 
-- CODE:

quantidade = int(input())
preco1 = float(input())
preco2 = float(input())

if (quantidade < 2):
	valor = (preco1)
else:
	valor = (preco1 + (0.75 * preco2))
	
print(round(valor,2))

-- OUTPUT:
130.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:35:29) 
-- CODE:

quantidade = int(input())
preco1 = float(input())
preco2 = float(input())

if (quantidade < 2):
	valor = (preco1)
else:
	valor = (preco1 + (0.75 * preco2))
	
print(round(valor,2))

-- EXECUTION TIME:
0.151779
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
130.69
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
190.18
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:37:15) 
-- CODE:

quantidade = int(input())
preco1 = float(input())
preco2 = float(input())

if (quantidade < 2):
	valor = (preco1)
else:
	valor = (preco1 + (0.75 * preco2))
	
print(round(valor,2))

-- OUTPUT:
130.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:38:44) 
-- CODE:

quantidade = int(input())
preco1 = float(input())
preco2 = float(input())

if (quantidade < 2):
	valor = (preco1)
else:
	valor = (preco1 + (0.75 * preco2))
	
print(round(valor,2))

-- OUTPUT:
130.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:42:49) 
-- CODE:

quantidade = int(input())
preco1 = float(input())
preco2 = float(input())

if (quantidade < 2):
	valor = (preco1)
else:
	valor = (preco1 + (0.75 * preco2))
	
print(round(valor,2))

-- EXECUTION TIME:
0.147976
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
130.69
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
190.18
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:42:54) 
-- CODE:

quantidade = int(input())
preco1 = float(input())
preco2 = float(input())

if (quantidade < 2):
	valor = (preco1)
else:
	valor = (preco1 + (0.75 * preco2))
	
print(round(valor,2))

-- OUTPUT:
130.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:46:45) 
-- CODE:

quantidade = int(input())
preco1 = float(input())
preco2 = float(input())

if (quantidade < 2):
	valor = (preco1)
else:
	valor = (preco1 + (0.75 * preco2))
	
print(round(valor,2))

-- OUTPUT:
130.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:48:21) 
-- CODE:

quantidade = int(input())
preco1 = float(input())
preco2 = float(input())

if (quantidade < 2):
	valor = (preco1)
else:
	valor = (preco1 + (0.75 * preco2))
	
print(round(valor,2))

-- OUTPUT:
130.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:48:38) 
-- CODE:

quantidade = int(input())
preco1 = float(input())
preco2 = float(input())

if (quantidade < 2):
	valor = (preco1)
else:
	valor = (preco1 + (0.75 * preco2))
	
print(round(valor,2))

-- EXECUTION TIME:
0.140435
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
130.69
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
190.18
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:48:54) 
-- CODE:

quantidade = int(input())
preco1 = float(input())
preco2 = float(input())

if (quantidade < 2):
	valor = (preco1)
else:
	valor = (preco1 + (0.75 * preco2))
	
print(round(valor,2))

-- OUTPUT:
130.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:50:40) 
-- CODE:

quantidade = int(input())
preco1 = float(input())
preco2 = float(input())

if (quantidade = 2):
	valor = (preco1 + (0.75 * preco2))
else:
	valor = (preco1)
	
print(round(valor,2))

-- ERROR:
File "XXXX", line 6
    if (quantidade = 2):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:51:03) 
-- CODE:

quantidade = int(input())
preco1 = float(input())
preco2 = float(input())

if (quantidade >= 2):
	valor = (preco1 + (0.75 * preco2))
else:
	valor = (preco1)
	
print(round(valor,2))

-- OUTPUT:
130.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:51:14) 
-- CODE:

quantidade = int(input())
preco1 = float(input())
preco2 = float(input())

if (quantidade >= 2):
	valor = (preco1 + (0.75 * preco2))
else:
	valor = (preco1)
	
print(round(valor,2))

-- EXECUTION TIME:
0.149125
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
130.69
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
190.18
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:53:15) 
-- CODE:

quantidade = int(input())
preco1 = float(input())
preco2 = float(input())

if (quantidade >= 2):
	valor = (preco1 + (0.75 * preco2))
else:
	valor = (preco1)
	
print(round(valor,2))

-- OUTPUT:
130.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:53:46) 
-- CODE:

quantidade = int(input())
preco1 = float(input())
preco2 = float(input())

if (quantidade >= 2):
	valor = (preco1 + (0.75 * preco2))
else:
	valor = (preco1)
	
print(round(valor,2))

-- EXECUTION TIME:
0.160935
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
130.69
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
190.18
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
